Fix setting not navigate to default on mobile screen, update setting css

--- a/frontend/src/pages/Settings/styles/SettingsContent.module.css
+++ b/frontend/src/pages/Settings/styles/SettingsContent.module.css
@@ -44,3 +44,9 @@
     /* background-color: var(--color-white); */
     margin-bottom: 20px;
 }
+
+@media (width<=800px) {
+    .inputItem {
+        width: 100%;
+    }
+}
